@startuml

package org.example.transaction.controller {
    class AccountController {
        +getAccountByUsername(username: String): Account
        +createAccount(username: String): void
        +depositToAccount(accountTransaction: AccountTransaction): void
    }

    class AccountInventoryController {
        +buyNewStock(buyStock: BuyStockRequest): void
        +sellStockInInventory(sellStock: SellStockRequest): void
        +getStockOwnedByUsername(username: String): List<StockOwnedBasicDTO>
        +getStockHistoryByUsername(username: String, ticker: String): List<StockTransactionDTO>
    }
}

package org.example.transaction.DTO {
    class StockOwnedBasicDTO {
        -ticker: String
        -amountOwned: Integer
        -costBasis: Double
    }

    class StockTransactionDTO {
        -stockName: String
        -amount: Integer
        -timestamp: LocalDateTime
        -buySell: String
        -price: Double
    }
}

package org.example.transaction.model.entity {
    class Account {
        -username: String
        -accountBalance: Double
        -totalProfits: Double

        +updateTotalProfits(costBasis: double, sharesToSell: int, currentPrice: double): void
        +updateAccountBalance(amountToAdd: double): void
    }

    class StockOwned {
        -id: Integer
        -account: Account
        -ticker: String
        -amountOwned: Integer
        -costBasis: Double
        -transactionHistory: List<StockTransaction>

        +updateCostBasisAndAmountOwned(amountToBuy: int, currentStockPrice: double): void
    }

    class StockTransaction {
        -id: Long
        -stockOwned: StockOwned
        -amount: Integer
        -timestamp: LocalDateTime
        -buySell: String
        -price: Double
    }
}

package org.example.transaction.model.payload {
    class AccountTransaction {
        -username: String
        -amountToAdd: Double
    }

    class BuyStockRequest {
        -username: String
        -ticker: String
        -sharesToBuy: int
    }

    class SellStockRequest {
        -username: String
        -ticker: String
        -sharesToSell: int
    }
}

org.example.transaction.controller --|> org.example.transaction.DTO
org.example.transaction.controller --|> org.example.transaction.model.entity
org.example.transaction.controller --|> org.example.transaction.model.payload

@enduml
